--- a/server/src/test/test.html
+++ b/server/src/test/test.html
@@ -7,15 +7,22 @@
 </head>
 
 <body>
-    <input type='textfield' placeholder='Name/ID'>
-    <input type='button' value='Algorithm', onclick="refresh()">
-    <input type='button' value='Question', onclick="refresh()">
-    <input type='button' value='Recommendation', onclick="refresh()">
-    <input type='button' value='Question Option', onclick="refresh()">
-    <input type='button' value='Question Answer', onclick="refresh()">
+    <div id="error"></div>
+    <input id="id" type='textfield' placeholder='ID'>
+    <input id="name" type='textfield' placeholder='Name'><br/>
+    <input type='button' value='Algorithm', onclick="send('algorithm')">
+    <input type='button' value='Question', onclick="send('question')">
+    <input type='button' value='Recommendation', onclick="send('recommendation')">
+    <input type='button' value='Question Option', onclick="send('question_option')">
+    <input type='button' value='Question Answer', onclick="send('question_answer')"><br/>
+
+    <input id="GET" type='radio' name="type" value='get' checked>Get
+    <input id="PUT" type='radio' name="type" value='put'>Put
+    <input id="POST" type='radio' name="type" value='post'>Post
+
     
 </body>
 
 </html>
 
-<script src="test.js" type="text/javascript">
+<script src="test.js" type="text/javascript"></script>
