--- a/server/src/test/test.html
+++ b/server/src/test/test.html
@@ -46,5 +46,5 @@
 
 </html>
 
-<script src="test.js" type="text/javascript"></script>
-<script src="onClickMethods.js" type="text/javascript"></script>
+<script src="scripts/fetch.js" type="text/javascript"></script>
+<script src="scripts/onClickMethods.js" type="text/javascript"></script>
