Debugged PUT method for the algorithm controller. GET is in progress. Modified test interface to have key input. Fixed defect in fetch scripts

--- a/server/src/test/test.html
+++ b/server/src/test/test.html
@@ -12,19 +12,13 @@
     <span id="error"></span>
 
     <div class="parameters">
-        Id: <input id="id" type='textfield' placeholder='ID'> 
-        <br/>Name: <input id="name" type='textfield' placeholder='Name'>
+        Key: <input id="key" type='textfield' placeholder='Key'> *Key needed for put/posts
+        <br/><br/>Id: <input id="id" type='textfield' placeholder='ID'> 
         <br/>Question: <input id="questionId" type='textfield' placeholder='QuestionId'>
         <br/>Recommendation: <input id="recommendationId" type='textfield' placeholder='RecommendationId'>
         <br/>Question Option: <input id="questionOptionId" type='textfield' placeholder='QuestionOptionId'>
         <br/>Question: <input id="questionAnswerId" type='textfield' placeholder='QuestionAnswerId'>
         <br/><br/>
-        
-
-        <div class="info">
-            <br/>
-            <p>*Can only use Name when retrieving algorithms</p>
-        </div>
     </div>
 
     <input id="GET" type='radio' name="type" value='get' onClick="showPayload('false')" checked>Get
