Added functionality to question part of API. Doesn't add questions with PUT. Further debugging necessary.

--- a/server/src/test/test.html
+++ b/server/src/test/test.html
@@ -21,6 +21,17 @@
         <br/><br/>
     </div>
 
+    <div>
+        Testing Data for Algorithm: <br/>
+        PUT (EMPTY): {"name" : "tester"} <br />
+        PUT/POST (FILLED): {"algorithm":{"name": "test", "currentId": 0, "description": null, "id": 0, "questions": [], "recommendations" : [],
+        "shortDescription" : "testers", "startId": null}} <br /> <br />
+
+        Testing Data for Quesitons: <br />
+        PUT (EMPTY): {"prompt":"What?"} <br />
+        PUT/POST (FILLED): 
+    </div>
+
     <input id="GET" type='radio' name="type" value='get' onClick="showPayload('false')" checked>Get
     <input id="PUT" type='radio' name="type" value='put' onClick="showPayload('true')">Put
     <input id="POST" type='radio' name="type" value='post' onClick="showPayload('true')">Post
