Question controller is fully functional. Removed unnecessary storage of the storage obj. Added correct output to help check values recieved. Added minor key functionality.

--- a/server/src/test/test.html
+++ b/server/src/test/test.html
@@ -29,7 +29,7 @@
 
         Testing Data for Quesitons: <br />
         PUT (EMPTY): {"prompt":"What?"} <br />
-        PUT/POST (FILLED): 
+        PUT/POST (FILLED): {"question" { "id": 0, "currentId": 0, "algorithmParent": 0, "prompt": 'What?', "typeKey": null, "options": [], "answers": [] }}
     </div>
 
     <input id="GET" type='radio' name="type" value='get' onClick="showPayload('false')" checked>Get
