--- a/server/src/test/test.html
+++ b/server/src/test/test.html
@@ -22,14 +22,24 @@
     </div>
 
     <div>
+        <p>
         Testing Data for Algorithm: <br/>
         PUT (EMPTY): {"name" : "tester"} <br />
-        PUT/POST (FILLED): {"algorithm":{"name": "test", "currentId": 0, "description": null, "id": 0, "questions": [], "recommendations" : [],
-        "shortDescription" : "testers", "startId": null}} <br /> <br />
-
-        Testing Data for Quesitons: <br />
+        PUT/POST (FILLED): {"algorithm":{"name": "test", "currentId": 0, "description": null, "id": 0, "questions": [], "recommendations" : [],"shortDescription" : "testers", "startId": null}}
+        <br/><br/>{"name": "test", "currentId": 0, "description": null, "id": 0, "questions": [], "recommendations" : [],"shortDescription" : "testers", "startId": null}
+        </p>
+        <p>
+        Testing Data for Questions: <br />
         PUT (EMPTY): {"prompt":"What?"} <br />
-        PUT/POST (FILLED): {"question" { "id": 0, "currentId": 0, "algorithmParent": 0, "prompt": 'What?', "typeKey": null, "options": [], "answers": [] }}
+        PUT/POST (FILLED): {"question" :{ "id": 0, "currentId": 0, "algorithmParent": 0, "prompt": "What?", "typeKey": null, "options": [], "answers": [] }}
+        <br/><br/>{ "id": 0, "currentId": 0, "algorithmParent": 0, "prompt": "What?", "typeKey": null, "options": [], "answers": [] }
+        </p>
+        <p>
+        Testing Data for Recommendation: <br/>
+        PUT (EMPTY): {"title": "Recommendation", "description" : "This is the description."}<br />
+        PUT/POST (FILLED): {"recommendation" : {"id": 1,"algorithmParent": 0,"title": "Recommendation", "description": "This is the description modified.", "contentContinued": [] }}
+        <br/><br/>{"id": 1,"algorithmParent": 0,"title": "Recommendation", "description": "This is the description modified.", "contentContinued": [] }
+        </p>
     </div>
 
     <input id="GET" type='radio' name="type" value='get' onClick="showPayload('false')" checked>Get
