Converted existing controllers to using parameters instead of queries. Moved error handling elsewhere. Added minify methods. Setup Postman https://www.getpostman.com/collections/3f9820d4745108ed284e

--- a/server/src/test/test.html
+++ b/server/src/test/test.html
@@ -17,7 +17,7 @@
         <br/>Question: <input id="questionId" type='textfield' placeholder='QuestionId'>
         <br/>Recommendation: <input id="recommendationId" type='textfield' placeholder='RecommendationId'>
         <br/>Question Option: <input id="questionOptionId" type='textfield' placeholder='QuestionOptionId'>
-        <br/>Question: <input id="questionAnswerId" type='textfield' placeholder='QuestionAnswerId'>
+        <br/>Question Answer: <input id="questionAnswerId" type='textfield' placeholder='QuestionAnswerId'>
         <br/><br/>
     </div>
 
